<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/recyclerview_book_card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="4dp"
    android:background="@drawable/recycler_border"
    android:paddingVertical="12dp">


    <ImageView
        android:id="@+id/recyclerview_book_image"
        android:layout_width="wrap_content"
        android:layout_height="120dp"
        android:scaleType="fitCenter"

        android:src="@drawable/random_book"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/recyclerview_book_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:ellipsize="marquee"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:fontFamily="@font/open_sans_light"
        android:marqueeRepeatLimit="marquee_forever"
        android:singleLine="true"
        android:text="@string/category"
        android:textAlignment="textStart"
        android:textAllCaps="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@color/oboshor"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recyclerview_book_image" />

    <TextView
        android:id="@+id/recyclerview_book_body"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ellipsize="marquee"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:fontFamily="@font/open_sans"
        android:marqueeRepeatLimit="marquee_forever"
        android:singleLine="true"
        android:text="@string/book"
        android:textAlignment="textStart"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="@+id/recyclerview_book_title"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/recyclerview_book_title"
        app:layout_constraintTop_toBottomOf="@+id/recyclerview_book_title" />

    <TextView
        android:id="@+id/recyclerview_book_time"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ellipsize="marquee"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:fontFamily="@font/open_sans"
        android:marqueeRepeatLimit="marquee_forever"
        android:singleLine="true"
        android:text="@string/author"
        android:textAlignment="textStart"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@color/orange"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/recyclerview_book_body"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/recyclerview_book_body"
        app:layout_constraintTop_toBottomOf="@+id/recyclerview_book_body" />

    <TextView
        android:id="@+id/recyclerview_book_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/open_sans"
        android:text="@string/random_amount"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@color/black"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/recyclerview_book_time"
        app:layout_constraintTop_toBottomOf="@+id/recyclerview_book_time" />

    <TextView
        android:id="@+id/recyclerview_book_currency"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:fontFamily="@font/open_sans"
        android:text="@string/tk"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@color/black"
        android:textSize="8sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/recyclerview_book_amount"
        app:layout_constraintStart_toEndOf="@+id/recyclerview_book_amount"
        app:layout_constraintTop_toTopOf="@+id/recyclerview_book_amount" />

</androidx.constraintlayout.widget.ConstraintLayout>