<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/recyclerview_cart_card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="4dp"
    android:background="@drawable/recycler_border"
    android:paddingVertical="12dp">


    <ImageView
        android:id="@+id/recyclerview_cart_image"
        android:layout_width="120dp"
        android:layout_height="wrap_content"

        android:layout_marginStart="16dp"
        android:scaleType="fitStart"

        android:src="@drawable/random_book"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/recyclerview_cart_category"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32dp"
        android:fontFamily="@font/open_sans_light"
        android:text="@string/category"
        android:textAlignment="textStart"
        android:textAllCaps="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@color/oboshor"
        android:textSize="12sp"
        app:layout_constraintEnd_toStartOf="@+id/recyclerview_cart_remove"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recyclerview_cart_author" />

    <TextView
        android:id="@+id/recyclerview_cart_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/open_sans"
        android:text="@string/book"
        android:textAlignment="textStart"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="@+id/recyclerview_cart_category"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/recyclerview_cart_category"
        app:layout_constraintTop_toBottomOf="@+id/recyclerview_cart_image" />

    <TextView
        android:id="@+id/recyclerview_cart_author"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/open_sans"
        android:text="@string/author"
        android:textAlignment="textStart"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@color/orange"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/recyclerview_cart_title"
        app:layout_constraintTop_toBottomOf="@+id/recyclerview_cart_title" />

    <TextView
        android:id="@+id/recyclerview_cart_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/open_sans"
        android:text="@string/random_amount"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@color/black"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/recyclerview_cart_author"
        app:layout_constraintTop_toBottomOf="@+id/recyclerview_cart_category" />

    <TextView
        android:id="@+id/recyclerview_cart_currency"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:fontFamily="@font/open_sans"
        android:text="@string/tk"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@color/black"
        android:textSize="8sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/recyclerview_cart_amount"
        app:layout_constraintStart_toEndOf="@+id/recyclerview_cart_amount"
        app:layout_constraintTop_toTopOf="@+id/recyclerview_cart_amount" />

    <ImageView
        android:id="@+id/recyclerview_cart_add"
        android:layout_width="40dp"
        android:layout_height="40dp"

        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:background="?selectableItemBackgroundBorderless"
        android:padding="8dp"
        android:src="@drawable/ic_baseline_add_circle_24"
        app:layout_constraintBottom_toTopOf="@+id/recyclerview_cart_item_quantity"
        app:layout_constraintEnd_toEndOf="parent" />


    <TextView
        android:id="@+id/recyclerview_cart_item_quantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/recyclerview_cart_add"
        app:layout_constraintStart_toStartOf="@+id/recyclerview_cart_add"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/recyclerview_cart_remove"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        android:background="?selectableItemBackgroundBorderless"

        android:padding="8dp"
        android:src="@drawable/ic_baseline_remove_circle_24"
        app:layout_constraintEnd_toEndOf="@+id/recyclerview_cart_item_quantity"
        app:layout_constraintStart_toStartOf="@+id/recyclerview_cart_item_quantity"
        app:layout_constraintTop_toBottomOf="@+id/recyclerview_cart_item_quantity" />
</androidx.constraintlayout.widget.ConstraintLayout>