<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/recyclerview_wishlist_card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="4dp"
    android:background="@drawable/recycler_border"
    android:paddingVertical="12dp">


    <ImageView
        android:id="@+id/recyclerview_wishlist_image"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:scaleType="fitStart"
        android:src="@drawable/random_book"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/recyclerview_wishlist_remove_btn"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginEnd="8dp"
        android:src="@drawable/ic_close"
        app:layout_constraintBottom_toBottomOf="@+id/recyclerview_wishlist_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/recyclerview_wishlist_image"
        app:layout_constraintTop_toTopOf="@+id/recyclerview_wishlist_image"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/recyclerview_wishlist_category"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/open_sans_light"
        android:text="@string/category"
        android:textAlignment="textStart"
        android:textAllCaps="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@color/oboshor"
        android:textSize="12sp"
        app:layout_constraintEnd_toStartOf="@+id/recyclerview_wishlist_add_to_cart_btn"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recyclerview_wishlist_author" />

    <TextView
        android:id="@+id/recyclerview_wishlist_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/open_sans"
        android:text="@string/book"
        android:textAlignment="textStart"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="@+id/recyclerview_wishlist_category"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/recyclerview_wishlist_category"
        app:layout_constraintTop_toBottomOf="@+id/recyclerview_wishlist_image" />

    <TextView
        android:id="@+id/recyclerview_wishlist_author"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/open_sans"
        android:text="@string/author"
        android:textAlignment="textStart"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@color/orange"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/recyclerview_wishlist_add_to_cart_btn"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/recyclerview_wishlist_title"
        app:layout_constraintTop_toBottomOf="@+id/recyclerview_wishlist_title" />

    <TextView
        android:id="@+id/recyclerview_wishlist_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/open_sans"
        android:text="@string/random_amount"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@color/black"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/recyclerview_wishlist_author"
        app:layout_constraintTop_toBottomOf="@+id/recyclerview_wishlist_category" />

    <TextView
        android:id="@+id/recyclerview_wishlist_currency"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:fontFamily="@font/open_sans"
        android:text="@string/tk"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@color/black"
        android:textSize="8sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/recyclerview_wishlist_amount"
        app:layout_constraintStart_toEndOf="@+id/recyclerview_wishlist_amount"
        app:layout_constraintTop_toTopOf="@+id/recyclerview_wishlist_amount" />

    <Button
        android:id="@+id/recyclerview_wishlist_add_to_cart_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:elevation="10dp"
        android:fontFamily="@font/open_sans_semibold"
        android:paddingHorizontal="24dp"
        android:text="Add to cart"
        android:textColor="@color/white"
        app:backgroundTint="@color/oboshor"
        app:cornerRadius="28dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.8" />

</androidx.constraintlayout.widget.ConstraintLayout>